Fixed #2072 - Java 21 - handle URLs